<resources>
    <string name="app_name">T169 Schedule</string>
    <string name="destination">Select Destination</string>
    <string name="arrival_station">Select Station</string>
    <string name="jiashan">Jiashan</string>
    <string name="jiaxing">Jiaxing</string>
    <string name="hangzou_south">Hangzhou South</string>
    <string name="yiwu">Yiwu</string>
    <string name="jinhua">Jinhua</string>
    <string name="longyou">Longyou</string>
    <string name="quzhou">Quzhou</string>
    <string name="shangrao">Shangrao</string>
    <string name="yingtan">Yingtan</string>
    <string name="jian">Jian</string>
    <string name="ganzhou">Ganzhou</string>
    <string name="guangzhou">Guangzhou</string>
    <string name="station_name">Station Name</string>
    <string name="welcome">Welcome!</string>
    <string name="train_t169">Train T169.</string>
    <string name="show_schedule">Show Schedule</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="arrival_time1">Arrives - 11:16</string>
    <string name="arrival_time2">Arrives - 11:31</string>
    <string name="arrival_time3">Arrives - 12:38</string>
    <string name="arrival_time4">Arrives - 13:39</string>
    <string name="arrival_time5">Arrives - 14:24</string>
    <string name="arrival_time6">Arrives - 15:02</string>
    <string name="arrival_time7">Arrives - 15:26</string>
    <string name="arrival_time8">Arrives - 16:38</string>
    <string name="arrival_time9">Arrives - 17:43</string>
    <string name="arrival_time10">Arrives - 20:41</string>
    <string name="arrival_time11">Arrives - 22:53</string>
    <string name="arrival_time12">Arrives - 04:50</string>
    <string name="departure_time">Departure Time</string>
    <string name="departure_time1">Departs - 10:40</string>
    <string name="departure_time2">Departs - 11:19</string>
    <string name="departure_time3">Departs - 11:34</string>
    <string name="departure_time4">Departs - 12:44</string>
    <string name="departure_time5">Departs - 13:43</string>
    <string name="departure_time6">Departs - 14:31</string>
    <string name="departure_time7">Departs - 15:05</string>
    <string name="departure_time8">Departs - 15:29</string>
    <string name="departure_time9">Departs - 16:43</string>
    <string name="departure_time10">Departs - 17:49</string>
    <string name="departure_time11">Departs - 20:47</string>
    <string name="departure_time12">Departs - 23:22</string>
    <string name="todo">TODO</string>
    <string name="train_schedule">Train Schedule</string>
    <string name="fare">$15.45</string>
    <string name="fare2">$5.98</string>
    <string name="fare3">$30.67</string>
    <string name="book_seat">Book Seat</string>
    <string name="duration">Duration</string>
    <string name="duration1">0 min</string>
    <string name="duration2">36 min</string>
    <string name="duration3">12 min</string>
    <string name="duration4">64 min</string>
    <string name="duration5">55 min</string>
    <string name="duration6">41 min</string>
    <string name="duration7">31 min</string>
    <string name="duration8">21 min</string>
    <string name="duration9">60 min</string>
    <string name="duration10">2hr 52 min</string>
    <string name="duration11">2hr 06 min</string>
    <string name="duration12">5hr 28 min</string>
    <string-array name="Stations">
        <item>Shanghai South</item>>
    </string-array>
    <string-array name="Destinations">
        <item> </item>
        <item>Jiashan</item>>
        <item>Jiaxing</item>
        <item>Hangzhou South</item>>
        <item>Yiwu</item>>
        <item>Jinhua</item>
        <item>Longyou</item>
        <item>Quzhou</item>
        <item>Shangrao</item>
        <item>Yingtan</item>>
        <item>Jian</item>
        <item>Ganzhou</item>
        <item>Guangzhou</item>

    </string-array>
</resources>
