<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.train.android_app_t169_schedule.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#512da8"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/train3" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/print_clearly"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/gotham"
                        android:text="@string/train_t169"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="-44dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/arrival_station"
                            android:textColor="@android:color/black"
                            android:textSize="24dp">
                        </TextView>

                        <Spinner
                            android:id="@+id/source"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="16dp"
                            android:paddingBottom="12dp"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">
                        </Spinner>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/destination"
                            android:textColor="@android:color/black"
                            android:textSize="24dp">
                        </TextView>
                        <Spinner
                            android:id="@+id/destination"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="16dp"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">
                        </Spinner>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/show_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="@font/calibri"
                    android:text="@string/show_schedule"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>